# golos-smart

golos.worker/: .gitignore  CMakeLists.txt  golos.worker.cpp
